--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,8 @@
-Home Works
+<mat-form-field>
+    <input matInput
+        placeholder="Choose a date"
+        [satDatepicker]="picker"
+        [value]="date">
+    <sat-datepicker #picker [rangeMode]="true"></sat-datepicker>
+    <sat-datepicker-toggle matSuffix [for]="picker"></sat-datepicker-toggle>
+  </mat-form-field>
