--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,7 +2,7 @@
     <div class="form-container">
         <mat-form-field>
             <mat-label>Select customer</mat-label>
-            <mat-select required ngModel name="customer">
+            <mat-select required ngModel name="customerId">
                 <mat-option  *ngFor="let option of options" [value]="option.id" >
                     {{option.name}}
                 </mat-option>
