--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,10 +1,15 @@
 .form-container {
+  margin-bottom: 50px;
+  .form-content {
     display: flex;
     flex-direction: column;
     width: 20%;
     margin: 0 auto;
+    .submit-button {
+      width: 100px;
+      margin: 0 auto;
+    }
   }
-.submit-button {
-    width: 100px;
-    margin: 0 auto;
 }
+
+
