--- a/src/app/customer-orders/customer-orders.component.html
+++ b/src/app/customer-orders/customer-orders.component.html
@@ -16,7 +16,7 @@
         </ng-container>
 
         <ng-container matColumnDef="orderedDate">
-            <th mat-header-cell *matHeaderCellDef> Odered date </th>
+            <th mat-header-cell *matHeaderCellDef> Ordered date </th>
             <td mat-cell *matCellDef="let element"> {{element.orderedDate | date:'short'}} </td>
         </ng-container>
 
