--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,13 +1,16 @@
-<div class="form-container">
-    <app-customer-filter [customers]="customers" (emitfilterValues)="getCustomerOrders($event)"></app-customer-filter>
-</div>
-<ng-container *ngIf="customerOrders?.length > 0">
-    <div class="order-summary">
+<div class="filter-summary-content">
+    <div class="form-container">
+        <app-customer-filter [customers]="customers" (emitfilterValues)="getCustomerOrders($event)">
+        </app-customer-filter>
+    </div>
+    <div class="order-summary" *ngIf="customerOrders?.length > 0">
         <div>Date range: {{dateRange}}</div>
         <div>Total number of days : {{totalNumberOfDaysSelected}}</div>
         <div> Number of orders: {{orderCount}} </div>
         <div>Total price: {{finalPrice}}</div>
     </div>
+</div>
+<ng-container *ngIf="customerOrders?.length > 0">
     <app-customer-orders [data]="customerOrders"></app-customer-orders>
 </ng-container>
 <ng-container *ngIf="customerOrders?.length === 0">
